--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,15 +1,20 @@
 <div class="container">
   <div class="row">
-    <div class="col-md-12">
+    <div class="col-md-8 col-md-offse-2">
       <% @posts.each do |post| %>
         <div class="jumbotron">
           <h2><%= post.title %></h2>
-          <h4><%= post.subtitle %></h4>
-          <p><%= post.content_post %></p>
-          <p><%= link_to 'Show', post, class:"btn btn-success" %> <%= link_to 'Edit', edit_post_path(post), class:"btn btn-warning" %> <%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' }, class:"btn btn-danger" %></p>
+          <h4><%= "Publicado por #{User.find(post.user_id).email.split('@')[0]} hace aproximadamente #{time_ago_in_words(post.created_at)}" %></h4>
+          <p><%= post.content_post.first(250) %> ...</p>
+          <p><%= link_to 'Show', post, class:"btn btn-success" %>
+            <% if user_signed_in? && current_user.id == User.find(post.user_id).id  %>
+             <%= link_to 'Edit', edit_post_path(post), class:"btn btn-warning" %>
+             <%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' }, class:"btn btn-danger" %>
+            <% end %>
+          </p>
         </div>
       <% end %>
       <%= link_to 'New Post', new_post_path %>
-      </div>
+    </div>
   </div>
 </div>
