--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,8 +1,8 @@
 <div class="container">
   <div class="row">
-    <div class="col-md-12">
+    <div class="col-md-8 col-md-offset-2">
       <h1 class="text-center">New Post</h1>
-      <%= render 'form', post: @post %>
+      <%= render 'form', action: "New" %>
     </div>
   </div>
 </div>
