--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,9 @@
 
   <body>
     <%= render 'layouts/navbar' %>
-    <%= render 'layouts/messages' %>
     <%= yield %>
+    <footer>
+      <p>SuperBlog INC. Designed by Jefferson Bernal Cardona, Make It Real, 2016</p>
+    </footer>
   </body>
 </html>
