--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,20 +1,42 @@
 <div class="container">
   <div class="row">
-    <div class="col-md-8 col-md-offse-2">
-      <% @posts.each do |post| %>
-        <div class="jumbotron">
-          <h2><%= post.title %></h2>
-          <h4><%= "Publicado por #{User.find(post.user_id).email.split('@')[0]} hace aproximadamente #{time_ago_in_words(post.created_at)}" %></h4>
-          <p><%= markdown(post.content_post.first(250)) %> ...</p>
-          <p><%= link_to 'Show', post, class:"btn btn-success" %>
-            <% if user_signed_in? && current_user.id == User.find(post.user_id).id  %>
-             <%= link_to 'Edit', edit_post_path(post), class:"btn btn-warning" %>
-             <%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' }, class:"btn btn-danger" %>
-            <% end %>
-          </p>
-        </div>
-      <% end %>
-      <%= link_to 'New Post', new_post_path %>
+    <div class="col-md-8">
+      <div class="row">
+        <% @posts.each do |post| %>
+          <div class="col-md-6">
+            <div class="blog-main blog-teaser">
+              <div class="thumbnail">
+                <div class="caption">
+                  <h3 class="text-center text-color tittle"><%= post.title %></h3>
+                  <hr size="10">
+                  <h5 class="text-center text-color"><%="#{User.find(post.user_id).email.split('@')[0]}, #{time_ago_in_words(post.created_at)}" %></h5>
+                  <p class="text-center text-color content"><%= markdown("#{post.content_post.first(250)} + ...") %></p>
+                  <p><%= link_to 'Show', post, class:"btn" %>
+                    <% if user_signed_in? && current_user.id == User.find(post.user_id).id  %>
+                     <%= link_to 'Edit', edit_post_path(post), class:"btn" %>
+                     <%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' }, class:"btn" %>
+                    <% end %>
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        <% end %>
+      </div>
     </div>
+    <aside class="col-md-4">
+      <div class="panel panel-default">
+        <div class="panel-heading">
+          <h3 class="panel-title">Lista de Post</h3>
+        </div>
+        <div class="panel-body">
+          <ul>
+            <% Post.all.each do |post| %>
+              <li><a href="/posts/<%= post.id %>"><%= post.title %></a></li>
+            <% end %>
+          </ul>
+        </div>
+      </div>
+    </aside>
   </div>
 </div>
