--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -11,10 +11,10 @@
                   <hr size="10">
                   <h5 class="text-center text-color"><%="#{User.find(post.user_id).email.split('@')[0]}, #{time_ago_in_words(post.created_at)}" %></h5>
                   <p class="text-center text-color content"><%= markdown("#{post.content_post.first(250)} + ...") %></p>
-                  <p><%= link_to 'Show', post, class:"btn" %>
+                  <p><%= link_to 'Ver', post, class:"btn" %>
                     <% if user_signed_in? && current_user.id == User.find(post.user_id).id  %>
-                     <%= link_to 'Edit', edit_post_path(post), class:"btn" %>
-                     <%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' }, class:"btn" %>
+                     <%= link_to 'Editar', edit_post_path(post), class:"btn" %>
+                     <%= link_to 'Eliminar', post, method: :delete, data: { confirm: 'Are you sure?' }, class:"btn" %>
                     <% end %>
                   </p>
                 </div>
